[package]
name = "named_fn"
version = "0.2.0"
description = "Create typed functions that can be added as generics"
authors = ["Alex Andreba <aandrebafreelancer@gmail.com>"]
license = "MIT"
categories = ["rust-patterns"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full", "extra-traits"] }